# ci-ai-orchestrator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
ai-orchestrator/: .dockerignore  .env.example  Dockerfile  OLLAMA_SETUP.md  audit_log.jsonl  config.py  llm_provider.py  logging_config.py  main.py  pyproject.toml  requirements.txt
ai-orchestrator/agents/: credit_agent.py  explainability_agent.py  fraud_agent.py  limit_review_agent.py  policy_rag_agent.py  propensity_agent.py  risk_decision_agent.py  state.py  treatment_agent.py
ai-orchestrator/ai_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ai-orchestrator/analytics/: aggregator.py  revenue_model.py  trends.py
ai-orchestrator/customer_context/: enrichment.py  models.py  redis_store.py  service.py
ai-orchestrator/db/: __init__.py  models.py  repository.py  session.py
ai-orchestrator/experimentation/: __init__.py  promoter.py  router.py  significance.py  tracker.py
ai-orchestrator/governance/: alerts.py  disparate_impact.py  fairness_monitor.py  report.py
ai-orchestrator/graph/: workflow.py
ai-orchestrator/learning/: drift_detector.py  feature_store.py  mlflow_tracking.py  model_trainer.py  outcome_consumer.py
ai-orchestrator/llm/: __init__.py  azure_provider.py  base.py  embeddings.py  factory.py  groq_provider.py  ollama_provider.py  openai_provider.py
ai-orchestrator/messaging/: consumer.py  dlq_producer.py
ai-orchestrator/models/: events.py
(+145 files in other folders)
