[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-orchestrator"
version = "1.0.0"
description = "Production-grade multi-agent AI orchestrator for credit card decisioning with RAG, explainability, and human-in-loop governance"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Citi AI Team"}
]

dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "kafka-python-ng>=2.2.0",
    "langgraph>=0.1.19",
    "langchain>=0.2.6",
    "langchain-community>=0.2.6",
    "langchain-core>=0.2.22",
    "qdrant-client>=1.9.1",
    "pypdf>=4.2.0",
    "tiktoken>=0.7.0",
    "pydantic>=2.7.3",
    "pydantic-settings>=2.3.1",
    "python-dotenv>=1.0.1",
    "structlog>=24.2.0",
    "prometheus-client>=0.20.0",
    "httpx>=0.27.0",
    "langchain-ollama>=0.1.0",
    "lz4>=4.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
ai-orchestrator = "main:app"

[tool.setuptools]
packages = ["agents", "graph", "messaging", "models", "rag"]

[tool.setuptools.package-data]
"*" = ["*.jsonl", "*.yml"]
